# citymux

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/renterm/: Cargo.toml
crates/renterm/src/: border.rs  canvas.rs  cell.rs  color.rs  drawable.rs  lib.rs  rect.rs  scalar.rs  style.rs  surface.rs  text.rs  vector.rs  view.rs
crates/renterm/src/test/: canvas.rs  mod.rs
src/: args.rs  canvas.rs  config.rs  draw.rs  encoding.rs  error.rs  escape_codes.rs  exit.rs  input.rs  layout.rs  main.rs  process.rs  size.rs  span.rs  spawn.rs  startup.rs  state.rs  term.rs  terminal.rs  tty.rs  tty_unix.rs  tty_windows.rs
src/test/: canvas.rs  commands.rs
