[package]
name = "citymux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
which = "7.0.2"
crossterm = { version = "0.28.1" }
crossterm_winapi = "0.9.1"
winapi = "0.3.9"
windows = { version = "0.59.0", features = [
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_Threading"
] }
windows-sys = { version = "0.59.0" }
os_pipe = "1.2.1"