[package]
name = "citymux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
which = "7.0.2"
crossterm = { version = "0.28.1", features = ["bracketed-paste","events","windows","event-stream"]}
crossterm_winapi = "0.9.1"
winapi = "0.3.9"
windows = { version = "0.59.0", features = [
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_Threading"
] }
windows-sys = { version = "0.59.0" }
os_pipe = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.96"
vt100 = "0.15.2"
vte = "0.15.0"
renterm = { path = "./crates/renterm", features = ["vt100"] }
clap = { version = "4.5.32", features = ["cargo"]}
dirs = "6.0.0"
kdl = "6.3.4"
futures = "0.3.31"
serde_cbor = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
data-encoding = "2.8"
ctrlc = "3.4.6"
